   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
   by a select field (dropdown box) - or meaningful message on missing options


acct_mgr-0.3.2 (not yet released) - branch 0.11
 resolved issues
 * #9051: Unable to add users due to existing email addresses
   by fixing SQL statements responsible for db cleanup on account deletion
 * fix TypeError in account details admin page for not yet authenticated users
 * make option `verify_email` effective for `RegistrationModule`
 * fix bug from initial password store chaining implementation leading to
   false-positives on user store discovery and later unexpected login failure


acct_mgr-0.3.1 (13-Jul-2011) - branch 0.11
 resolved issues
 * #8963: Restore compatibility with Trac 0.11 - holding 10 different issues
 * further improve redirect loop protection (infinite loop after /login)
 * add more verbose error log messages for missing/unreadable password file
 * remove duplicated message in Trac 0.11 at account details admin page
 * prevent argument duplication on POST requests of account details admin page
 * enable admin to restart password hash refresh from configuration admin page


acct_mgr-0.3 (07-Jul-2011) - branch 0.11
 resolved issues
 * #3233: Infinite redirect loop after resetting the password
 * #3783: Form based login fails to forward nicely on referrer outside of Trac
 * #3989: Email verification and password reset with notification lock users
 * #4040: TracError instance has no attribute 'acctmgr' on new user creation
 * #4160: Password reset oddness with multiple projects config
 * #5247: Stack trace escapes to user when htdigest file is not writeable
 * #5964: Prevent multiple calls to LoginModule._remote_user()
 * #6821: Register and 'Forgot your password?' links can no longer be enabled
 * #7850: Error after upgrade from 0.11 to trunk version
 * #7863: Syntax error found when building egg
 * #7880: 'ioerror: invalid mode: Ur' in htfile.py